--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,8 @@ typings/
 
 # Optional eslint cache
 .eslintcache
+.editorconfig
+.vscode/
 
 # Microbundle cache
 .rpt2_cache/
@@ -74,6 +76,7 @@ typings/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
+.angular/cache/
 
 # Next.js build output
 .next
